# one_day_omocha

./: .gitignore  README.md  app.py  main.py  pyproject.toml
pages/: 1_🎲_サイコロ.py  2_🛤️_双六メーカー.py  3_☠️_黒ひげ危機一発.py  4_💣_マインスイーパー.py  5_🔢_カウントサポート.py  6_🎲_チンチロ.py  7_🔢_カウントサポートビンゴ.py
src/utils/: dice.py  storage.py  styles.py  sugoroku.py  time.py
tests/: test_dice.py  test_storage.py  test_sugoroku.py  test_time.py
